--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rollup/plugin-commonjs": "^17.1.0",
     "@vue/compiler-sfc": "^3.0.7",
     "deepmerge": "^4.2.2",
+    "material-design-icons-iconfont": "^6.1.0",
     "rollup": "^2.42.4",
     "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.32.8",
