--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
     "vue": "^2.6.12",
-    "vue-template-compiler": "^2.6.12"
-  },
-  "dependencies": {
+    "vue-template-compiler": "^2.6.12",
     "vuetify": "^2.4.8"
-  }
+  },
+  "dependencies": {}
 }
