--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vuetify-time-range-picker",
   "version": "1.0.0",
-  "description": "",
+  "description": "A time range picker, made so users can easily pick a one day time interval.",
   "main": "dist/time-range-picker.umd.min.js",
   "module": "dist/time-range-picker.esm.js",
   "files": [
