--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuetify-time-range-picker",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A time range picker, made so users can easily pick a one day time interval.",
   "main": "dist/time-range-picker.umd.min.js",
   "files": [
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "prepare": "npm run build",
-    "build": "npm run build:umd & npm run build:es",
+    "build": "npm run build:umd",
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/time-range-picker.umd.js & npm run minify",
     "minify": "uglifyjs -o dist/time-range-picker.umd.min.js dist/time-range-picker.umd.js"
   },
