--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "src/components"
   ],
   "scripts": {
-    "prepare": "npm run build",
     "build": "npm run build:umd",
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/time-range-picker.umd.js & npm run minify",
     "minify": "uglifyjs -o dist/time-range-picker.umd.min.js dist/time-range-picker.umd.js"
@@ -34,12 +33,17 @@
   "devDependencies": {
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "@vue/compiler-sfc": "^3.0.7",
     "deepmerge": "^4.2.2",
     "material-design-icons-iconfont": "^6.1.0",
+    "postcss": "^8.2.10",
     "rollup": "^2.42.4",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-scss": "^2.6.1",
     "rollup-plugin-vue": "^6.0.0",
+    "rollup-plugin-vuetify": "^0.2.4",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
     "uglify-js": "^3.13.4",
