--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   ],
   "scripts": {
     "build": "npm run build:umd",
-    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/time-range-picker.umd.js & npm run minify",
-    "minify": "uglifyjs -o dist/time-range-picker.umd.min.js dist/time-range-picker.umd.js"
+    "build:esm": "rollup --config build/rollup.config.js --format esm --file dist/time-range-picker.esm.js",
+    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/time-range-picker.umd.js"
   },
   "repository": {
     "type": "git",
@@ -31,10 +31,12 @@
   },
   "homepage": "https://github.com/arthursb2016/vuetify-time-range-picker#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.13.15",
+    "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "@vue/compiler-sfc": "^3.0.7",
+    "@vue/compiler-sfc": "^3.0.11",
     "deepmerge": "^4.2.2",
     "material-design-icons-iconfont": "^6.1.0",
     "postcss": "^8.2.10",
@@ -49,7 +51,12 @@
     "uglify-js": "^3.13.4",
     "vue": "^2.6.12",
     "vue-template-compiler": "^2.6.12",
-    "vuetify": "^2.4.8"
+    "vuetify": "^2.4.10",
+    "webpack": "^5.34.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "peerDependencies": {
+    "vue": "^2.6.12",
+    "vuetify": "^2.4.8"
+  }
 }
