--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuetify-time-range-picker",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "A time range picker, made so users can easily pick a one day time interval.",
   "main": "dist/time-range-picker.umd.min.js",
   "module": "dist/time-range-picker.esm.min.js",
@@ -10,7 +10,7 @@
     "src/components"
   ],
   "scripts": {
-    "prepare": "build",
+    "prepare": "npm run build",
     "build": "npm run build:esm & npm run build:umd",
     "build:esm": "rollup --config build/rollup.config.js --format esm --file dist/time-range-picker.esm.js & npm run minify:esm",
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/time-range-picker.umd.js & npm run minify:umd",
